[package]
name = "unikko"
version = "0.0.0"
edition = "2021"
description = "Unikko: Poppy"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
